--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <p>at <a href="https://icpe2022.spec.org/">ICPE 2022</a><p>
       <a href="https://panda-workshop.github.io/" class="btn">HOME</a> <a href="https://panda-workshop.github.io/callForPapers" class="btn">CALL FOR PAPERS</a> <a href="https://panda-workshop.github.io/submission" class="btn">SUBMISSIONS</a> <a href="https://panda-workshop.github.io/organization" class="btn">ORGANIZATION</a>
-      <a href="https://icpe2022.spec.org/">at ICPE 2022</a>
-     <!-- {% if site.github.is_project_page %}-->
-       
-     <!-- {% endif %}-->
+     
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
 
