--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <p>at <a href="https://icpe2022.spec.org/">ICPE 2022</a><p>
+      <p>at <a href="https://icpe2022.spec.org/" style="color:aliceblue">ICPE 2022</a><p>
       <a href="https://panda-workshop.github.io/" class="btn">HOME</a> <a href="https://panda-workshop.github.io/callForPapers" class="btn">CALL FOR PAPERS</a> <a href="https://panda-workshop.github.io/submission" class="btn">SUBMISSIONS</a> <a href="https://panda-workshop.github.io/organization" class="btn">ORGANIZATION</a>
      
       {% if site.show_downloads %}
