--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <p>at <a href="https://icpe2022.spec.org/" style="color:aliceblue"><u>ICPE 2022</u></a><p>
-      <a href="https://panda-workshop.github.io/" class="btn">HOME</a> <a href="https://panda-workshop.github.io/callForPapers" class="btn">CALL FOR PAPERS</a> <a href="https://panda-workshop.github.io/submission" class="btn">SUBMISSIONS</a> <a href="https://panda-workshop.github.io/organization" class="btn">ORGANIZATION</a>
+      <a href="https://panda-workshop.github.io/" class="btn">HOME</a> <a href="https://panda-workshop.github.io/agenda" class="btn">AGENDA</a> <a href="https://panda-workshop.github.io/callForPapers" class="btn">CALL FOR PAPERS</a> <a href="https://panda-workshop.github.io/submission" class="btn">SUBMISSIONS</a> <a href="https://panda-workshop.github.io/organization" class="btn">ORGANIZATION</a>
      
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
@@ -29,7 +29,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 
-      <footer class="site-footer" style="background-color: mediumturquoise;">
+      <footer class="site-footer" >
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
