--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <p>at <a href="https://icpe2022.spec.org/" style="color:aliceblue"><u>ICPE 2022</u></a> colocated with the annual meeting of the 
-        <a href="https://research.spec.org/working-groups/rg-predictive-data-analytics/" style="color:aliceblue"><u>RG Predictive Data Analytics Working Group</u></a><p>
+        <a href="https://research.spec.org/working-groups/rg-predictive-data-analytics/" style="color:aliceblue"><u>SPEC RG</u></a><p>
       <a href="https://panda-workshop.github.io/" class="btn">HOME</a> <a href="https://panda-workshop.github.io/agenda" class="btn">AGENDA</a> <a href="https://panda-workshop.github.io/callForPapers" class="btn">CALL FOR PAPERS</a> <a href="https://panda-workshop.github.io/submission" class="btn">SUBMISSIONS</a> <a href="https://panda-workshop.github.io/organization" class="btn">ORGANIZATION</a>
      
       {% if site.show_downloads %}
